gnome-clocks 48.alpha
=================
 * Add mnemonics to all buttons
 * Fix auto-focus behavior in the alarm dialog
 * Update metainfo metadata
 * Fix restoration of the window width and height
 * Port to CSS variables
 * Fix Help page
 * Fix translation of the application name
 * Translations updates

gnome-clocks 47.0
=================
 * Port to new libadwaita widgets
 * Translations updates

gnome-clocks 46.0
=================
 * Translations updates

gnome-clocks 46.rc
==================
 * Add mnemonic to Start button
 * Disable alarm after ringing when not set to repeat
 * Fix countdown timer progress during suspend
 * Fix resume bug on clear button pressed
 * Fix sorting of locations
 * Improve app metainfo for AppStream 1.0
 * Show a toast when a new alarm is set
 * Translations updates

gnome-clocks 45.0
=================
 * Port to new libadwaita widgets, including breakpoints
 * Bundle bell sounds
 * GNOME Shell search provider performance improvements
 * Improve location matching by normalizing location search strings
 * Replace deprecated code paths
 * Use xdg-desktop-portal to get system clock format
 * Translation updates

gnome-clocks 44.0
===================
 * Translations updates

gnome-clocks 44.rc
===================
 * Translations updates

gnome-clocks 44.beta
===================
 * Display seconds in the world clock detail view
 * Reset snooze time when disabling alarms
 * Add mnemonics to the view switcher
 * Say ahead/behind instead of later/earlier
 * Fix button layout in the timer view
 * Add missing ellipses to button labels
 * Remove an incorrect tooltip
 * Help fixes
 * Translations updates

gnome-clocks 43.0
===================
 * Translations updates

gnome-clocks 43.beta
===================
 * Port to AdwAboutWindow - Christopher Davis 
 * Fix notifications are immediately withdrawn - Sophie Herold
 * Translations updates

gnome-clocks 43.alpha
===================
 * Build against either geocode-glib-1.0 or geocode-glib-2.0