@@ -47,6 +47,16 @@
     </screenshot>
   </screenshots>
   <releases>
+    <release version="48.beta" date="2025-02-01">
+      <description>
+        <p>A new release of Clocks</p>
+        <ul>
+          <li>Call setlocale() earlier to fix i18n</li>
+          <li>Make alarm setup dialog adaptive</li>
+          <li>Translation updates</li>
+        </ul>
+      </description>
+    </release>
     <release version="48.alpha" date="2024-12-12">
       <description>
         <p>A new release of Clocks</p>
