@@ -1,3 +1,9 @@
+gnome-clocks 48.beta
+=================
+ * Call setlocale() earlier to fix i18n
+ * Make alarm setup dialog adaptive
+ * Translation updates
+
 gnome-clocks 48.alpha
 =================
  * Add mnemonics to all buttons
